<resources>
    <string name="app_name">FingerprintAuthenticatedLogin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_with_fingerprint_next_time_you_login">Sign in with fingerprint next time you login</string>
    <string name="login">Login</string>
    <string name="welcome_back_user">Welcome back user!</string>
    <string name="logout">Logout</string>
    <string name="touch_the_sensor_to_login">Touch the fingerprint sensor to login</string>
    <string name="sign_in_as_another_user">Sign in as another user</string>
    <string name="fingerprint_login_for">Fingerprint login for</string>
    <string name="thumb_fingerprint">thumb_fingerprint</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password_via_server">Reset password via server</string>
    <string name="reset_password">Reset Password</string>
    <string name="assuming_this_password_change_activity_only_reflects_the_change_in_data_at_the_server_side">Assuming this password change activity only reflects the change in data at the server side and not in our device itself.</string>
    <string name="new_password">New password</string>
    <string name="jerseymike">jerseymike</string>
    <string name="password_small">password</string>
    <string name="changing_password_from_here_updates_the_app_s_database_as_well_as_server_data">Changing password from here updates the app\'s database as well as server data.</string>
    <string name="message_wrong_credentials">Wrong credentials</string>
    <string name="message_reset_password_via_app">Reset password via app</string>
    <string name="message_reset_password_via_server">Reset password via server</string>
    <string name="message_password_reset_success">Password successfully reset</string>
    <string name="message_password_reset_failure">Password could not be reset</string>
</resources>
